@@ -1,5 +1,15 @@
 2007-08-25  Rodney Dawes  <dobey.pwns@gmail.com>
 
+	* src/preferences.c (create_prefs_dialog):
+	Add mnemonics to a few labels, and set mnemonic widget if needed
+
+	* src/ui.c (group_type_label[3]):
+	Add mnemonics to the type labels, for the preferences dialog
+
+	Fixes #466695
+
+2007-08-25  Rodney Dawes  <dobey.pwns@gmail.com>
+
 	* src/Makefile.am:
 	* src/ghex-window.c (ghex_window_new):
 	Pass PREFIX in to bonobo_ui_util_set_ui so that we can load the
